src/styles/Actor.css
.actor {
	width: 100%;
	color: white;
	margin-top: 5rem;
}

.actor-container {
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 2%;
	padding-bottom: 5%;
	display: grid;

	grid-template-columns: 25% 75%;
	grid-template-areas:
		"heading heading"
		"img text"
		"img cv"
		"cert cert";
}

.actor-top {
	width: 100%;
}

.actor-top svg,
.actor-bottom svg {
	display: block;
}

.actor-middle {
	padding-top: 1px;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	background-image: url(../images/actor-wave-v6_middle.svg);
}

.actor-bottom {
	width: 100%;
}

.actor-heading {
	grid-area: heading;
	font-family: "Polly Rounded";
	letter-spacing: -0.04em;
	font-size: 3rem;
	margin-bottom: 3rem;
	word-spacing: -0.4rem;
}

.actor-text {
	grid-area: text;
}

.actor-cv {
	grid-area: cv;
	font-size: 1.5rem;
}

.actor-cert {
	grid-area: cert;
	font-size: 1.5rem;
}

.actor-title {
	font-family: "Polly Rounded";
	letter-spacing: -0.04em;
	font-size: 3rem;
}

.actor-subtitle {
	margin-top: -1rem;
	margin-bottom: 1rem;
	font-size: 2.5rem;
	font-family: "Polly Rounded";
	letter-spacing: -0.04em;
	font-weight: bold;
}

.actor-copy {
	font-size: 1.5rem;
}

.actor-img {
	grid-area: img;
	font-size: 1.5rem;
	margin-bottom: 1rem;
}

.actor-photo {
	width: 88%;
}

@media only screen and (max-width: 600px) {
	.actor {
		background-size: cover;
	}

	.actor-container {
		padding-left: 10%;
		padding-right: 10%;
		padding-top: 2%;
		padding-bottom: 5%;
		display: grid;
		grid-template-columns: 100%;
		grid-template-rows: repeat(auto, 4);
		grid-template-areas:
			"heading"
			"img"
			"text"
			"cv"
			"cert";
	}

	.actor-photo {
		width: 50%;
	}
}

@media (min-width: 1000px) {
	.actor-container {
		padding-left: 10%;
		padding-right: 10%;
		margin-top: -6%;
		margin-bottom: -3%;
		grid-template-areas:
			"heading heading"
			"img text"
			"img cv"
			"img cert";
	}
}

